src/objects/QR_Bill_Mapping__mdt.object
<CustomObject>
    <description>Mapping for Invoking the QR Bill API</description>
    <fields>
        <fullName>API_Token__c</fullName>
        <description>Token to invoke the API</description>
        <label>API Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boundary_Line_Scissors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parameter to invoke the API</description>
        <label>Boundary Line Scissors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boundary_Line_Separation_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parameter to invoke the API</description>
        <label>Boundary Line Separation Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boundary_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parameter to invoke the API</description>
        <label>Boundary Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Font_Family__c</fullName>
        <description>Parameter to invoke the API</description>
        <label>Font Family</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <description>Parameter to invoke the API</description>
        <label>Page Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Parameter to invoke the API</description>
        <label>Resolution</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL EndPoint</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>QR Bill API Mapping</label>
    <pluralLabel>QR Bill API Mapping</pluralLabel>
</CustomObject>